work still in progress

--- a/tidelabNews.html
+++ b/tidelabNews.html
@@ -12,12 +12,51 @@
 <body>
     <header>
         <!-- ADD THE NAVIGATION SECTION HERE -->
-
-
     </header>
+
     <main>
         <!-- ADD THE MAIN SECTION HERE -->
 
+        <h2 class="sub-title">Tiidelab News</h2>
+        <section>
+        <div>
+            <div>
+                <img src=https://pbs.twimg.com/media/FOY6UsXXoAUbHg0?format=jpg&name=360x360>
+                <p>Last week Saturday 19th March 2022, @TIIDELab had her first professional development class in the ongoing Prefellowship program.
+                    <!--We jointly examined key skills that's required of emerging software developer with emphasis on communication and critical reasoning skills.
+                    We looked into various learning processes and examined the four C's of the 21st century amongst which is collaboration, communication, creativity and critical thinking
+                    In the end, we practiced the application of critical thinking via de brono's thinking hats
+                    #softskills #tiidelab-->
+                </p>
+            </div>
+            <div>
+                <img src="https://pbs.twimg.com/media/FNebFyIXwAMtlQo?format=jpg&name=small">
+                <p>As @TIIDELab Prefellowship program advanced to the second week, Here's our participants' performance statistics.
+                    Congratulations to those who's advancing to week 2.
+                    <!--Let's keep learning 😊
+                    #SoftwareEngineering #newbiesintech
+                    #techfellowship-->
+                </p>
+            </div>
+        </div>
+        <div>
+            <img src="https://pbs.twimg.com/media/FOkC0mEWYAEJIkb?format=jpg&name=small">
+            <p>It was an atmosphere of sharing successes as participants' gather to celebrate their #OneMonthWithTIIDELab...
+                <!--It has been a challenging, amazing and inspiring one month journey @TIIDELab, 
+                learning coding and I have learnt and improve alot. Looking forward to spending more time with our remarkable big brother @Shamdex2000, 
+                our amiable facilitators and my fellow trainees @TIIDELab --meelah@Jemgem14
+                 <br>
+                 It has been an amazing one month anniversary journey @TIIDELab
+                 learning not just to code but other soft skills. i am looking forward to moving to the fellowship program. a big thank you to 
+                 @Shamdex2000, our amiable facilitators and my fellow trainees @TIIDELab. --Cole@vpsalmuel
+                 <br>
+                 The journey so far @TIIDELab has been life-changing. I will always be grateful to the founder @kadir_salami. My facilitator 
+                 @Shamdex2000, @chrismadufor, @unclebigbay143, @HaneefahOwuri & all my mentors @TIIDELab. You guys are raising leaders 
+                 @TIIDELab and I'm proud to be part of it.  --Nsiegbunam Raymond@nsraymond10
+   
+                -->
+            </p>
+        </div>
 
     </main>
     <footer>
