--- a/politics.html
+++ b/politics.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+    <header>
+        <!-- ADD THE NAVIGATION SECTION HERE -->
+
+
+    </header>
+    <main>
+        <!-- ADD THE MAIN SECTION HERE -->
+
    <!-- section heading -->
    <span class="section-heading">
     <div class="left"></div>
@@ -227,6 +235,13 @@
     </a>
 
 </section>
+
+</main>
+<footer>
+    <!-- ADD THE FOOTER SECTION HERE -->
+
+    
+</footer>
 </body>
 
 </html>
