quick fix of the page display

--- a/tidelabNews.html
+++ b/tidelabNews.html
@@ -26,7 +26,7 @@
             <div class="container-wrapper">
                 <div class="news-clip">
                 <img src=https://pbs.twimg.com/media/FOY6UsXXoAUbHg0?format=jpg&name=360x360>
-                <p class="news-brief">TIIDELab had her first professional development class in the ongoing Prefellowship program.
+                <p class="news-brief">TIIDELab had her first professional development class...
                     <!--We jointly examined key skills that's required of emerging software developer with emphasis on communication and critical reasoning skills.
                     We looked into various learning processes and examined the four C's of the 21st century amongst which is collaboration, communication, creativity and critical thinking
                     In the end, we practiced the application of critical thinking via de brono's thinking hats
@@ -35,7 +35,7 @@
                 </div>
                 <div class="news-clip">
                 <img src="https://pbs.twimg.com/media/FNebFyIXwAMtlQo?format=jpg&name=small">
-                <p class="news-brief">TIIDELab Prefellowship program advanced to the second week, the participants' performance statistics.
+                <p class="news-brief">TIIDELab Prefellowship program advanced to the second week...
                     
                     <!--Let's keep learning 😊
                     #SoftwareEngineering #newbiesintech
@@ -45,7 +45,7 @@
 
                 <div class="news-clip">
                     <img src="https://pbs.twimg.com/media/FOkC0mEWYAEJIkb?format=jpg&name=small">
-                     <p news-brief>It was an atmosphere of sharing successes as participants' gather to celebrate their #OneMonthWithTIIDELab...
+                     <p news-brief><!--It was an atmosphere of sharing successes as--> Tiidelab pre-fellow participants' gather to celebrate their #OneMonthWithTIIDELab...
                         <!--It has been a challenging, amazing and inspiring one month journey @TIIDELab, 
                         learning coding and I have learnt and improve alot. Looking forward to spending more time with our remarkable big brother @Shamdex2000, 
                         our amiable facilitators and my fellow trainees @TIIDELab --meelah@Jemgem14
