added more news row

--- a/tidelabNews.html
+++ b/tidelabNews.html
@@ -59,6 +59,32 @@
                          @TIIDELab and I'm proud to be part of it.  --Nsiegbunam Raymond@nsraymond10-->
                     </p>
                 </div>
+            </div><br>
+    <hr>            
+            <div class="container-wrapper">
+                <div class="news-clip">
+                <img src=https://pbs.twimg.com/media/FNUq9jCX0AU2NHO?format=jpg&name=small>
+                <p class="news-brief">TIIDELab enjoins the world in celebration of women's day...
+                    <!--To every women out there, we celebrate your strength, tenacity and resilience in all that you do. Your presence in our world complete our world and indeed, you are the real #MVPs.
+                    Happy International Women's Day 🤠 #BreakingTheBias #IWD2022 #SDG5-->
+                </p>
+                </div>
+                <div class="news-clip">
+                <img src="https://pbs.twimg.com/media/FM6Rt2bXoAIDq7N?format=jpg&name=360x360">
+                <p class="news-brief">TIIDELab commenced the cohort 4 Prefellowship program with a scintillating onboarding session....
+                <!--Yesterday, @TIIDELab commenced the cohort 4 Prefellowship program with a scintillating onboarding session. We had in our midst arrays of coaches and alumni who eased the newly admitted participants into the program
+                @ibrolive spoke extensively on tips to become a successful techie @ibrolive reiterated the importance of positive mindset, consistency, being findable, taking responsibility and most importantly, sharing one's little wins on the actualization of one's dream.
+                It promises to be a worthwhile journey guys-->
+                </p>
+                </div>
+
+                <div class="news-clip">
+                    <img src="https://pbs.twimg.com/media/FM083wAXwAUgw8W?format=jpg&name=small">
+                     <p news-brief>Tiidelab onboards 150 successful applicants.... <!--Today, Another 150 successful applicants will be onboarded into 
+                        @TIIDELab cohort 4 Prefellowship.Here's our best wishes to all of them as they brace up to transition into the world of software technology.
+                        But then, Let's have a glimpse of our facilitators #softwwredev-->
+                    </p>
+                </div>
             </div>
 
             
