--- a/tidelabNews.html
+++ b/tidelabNews.html
@@ -63,69 +63,39 @@
             <h2 class="sub-title">Tiidelab News</h2>
 
             <div class="container-wrapper">
-                <div class="news-clip">
+                <a href="news1.html"><div class="news-clip">
                     <img src=https://pbs.twimg.com/media/FOY6UsXXoAUbHg0?format=jpg&name=360x360>
-                    <p class="news-brief">TIIDELab had her first professional development class...
-                        <!--We jointly examined key skills that's required of emerging software developer with emphasis on communication and critical reasoning skills.
-                    We looked into various learning processes and examined the four C's of the 21st century amongst which is collaboration, communication, creativity and critical thinking
-                    In the end, we practiced the application of critical thinking via de brono's thinking hats
-                    #softskills #tiidelab-->
-                    </p>
-                </div>
-                <div class="news-clip">
+                    <p class="news-brief">TIIDELab had her first professional development class...</p>
+                </div></a>
+
+                <a href="news2.html"><div class="news-clip">
                     <img src="https://pbs.twimg.com/media/FNebFyIXwAMtlQo?format=jpg&name=small">
-                    <p class="news-brief">TIIDELab Prefellowship program advanced to the second week...
+                    <p class="news-brief">TIIDELab Prefellowship program advanced to the second week...</p>
+                </div></a>
 
-                        <!--Let's keep learning 😊
-                    #SoftwareEngineering #newbiesintech
-                    #techfellowship-->
-                    </p>
-                </div>
-
-                <div class="news-clip">
+                <a href="news3.html"><div class="news-clip">
                     <img src="https://pbs.twimg.com/media/FOkC0mEWYAEJIkb?format=jpg&name=small">
-                    <p news-brief>
-                        <!--It was an atmosphere of sharing successes as--> Tiidelab pre-fellow participants' gather to
-                        celebrate their #OneMonthWithTIIDELab...
-                        <!--It has been a challenging, amazing and inspiring one month journey @TIIDELab, 
-                        learning coding and I have learnt and improve alot. Looking forward to spending more time with our remarkable big brother @Shamdex2000, 
-                        our amiable facilitators and my fellow trainees @TIIDELab --meelah@Jemgem14
-                        <br>
-                        It has been an amazing one month anniversary journey @TIIDELab
-                        learning not just to code but other soft skills. i am looking forward to moving to the fellowship program. a big thank you to 
-                         @Shamdex2000, our amiable facilitators and my fellow trainees @TIIDELab. --Cole@vpsalmuel
-                         <br>
-                        The journey so far @TIIDELab has been life-changing. I will always be grateful to the founder @kadir_salami. My facilitator 
-                         @Shamdex2000, @chrismadufor, @unclebigbay143, @HaneefahOwuri & all my mentors @TIIDELab. You guys are raising leaders 
-                         @TIIDELab and I'm proud to be part of it.  --Nsiegbunam Raymond@nsraymond10-->
-                    </p>
-                </div>
+                    <p news-brief>It was an atmosphere of sharing successes as...</p>
+                </div></a>
             </div><br>
     <hr>            
             <div class="container-wrapper">
-                <div class="news-clip">
+               <a href="news4.html"> <div class="news-clip">
                 <img src=https://pbs.twimg.com/media/FNUq9jCX0AU2NHO?format=jpg&name=small>
                 <p class="news-brief">TIIDELab enjoins the world in celebration of women's day...
-                    <!--To every women out there, we celebrate your strength, tenacity and resilience in all that you do. Your presence in our world complete our world and indeed, you are the real #MVPs.
-                    Happy International Women's Day 🤠 #BreakingTheBias #IWD2022 #SDG5-->
                 </p>
-                </div>
-                <div class="news-clip">
+                </div></a>
+               
+                <a href="news5.html"><div class="news-clip">
                 <img src="https://pbs.twimg.com/media/FM6Rt2bXoAIDq7N?format=jpg&name=360x360">
-                <p class="news-brief">TIIDELab commenced the cohort 4 Prefellowship program with a scintillating onboarding session....
-                <!--Yesterday, @TIIDELab commenced the cohort 4 Prefellowship program with a scintillating onboarding session. We had in our midst arrays of coaches and alumni who eased the newly admitted participants into the program
-                @ibrolive spoke extensively on tips to become a successful techie @ibrolive reiterated the importance of positive mindset, consistency, being findable, taking responsibility and most importantly, sharing one's little wins on the actualization of one's dream.
-                It promises to be a worthwhile journey guys-->
-                </p>
-                </div>
+                <p class="news-brief">TIIDELab commenced the cohort 4 Prefellowship program with a scintillating onboarding session...</p>
+                </div></a>
 
-                <div class="news-clip">
+               <a href="news6.html"> <div class="news-clip">
                     <img src="https://pbs.twimg.com/media/FM083wAXwAUgw8W?format=jpg&name=small">
-                     <p news-brief>Tiidelab onboards 150 successful applicants.... <!--Today, Another 150 successful applicants will be onboarded into 
-                        @TIIDELab cohort 4 Prefellowship.Here's our best wishes to all of them as they brace up to transition into the world of software technology.
-                        But then, Let's have a glimpse of our facilitators #softwwredev-->
+                     <p news-brief>Tiidelab onboards 150 successful applicants....
                     </p>
-                </div>
+                </div></a>
             </div>
 
 
