Made some changes

--- a/sports.html
+++ b/sports.html
@@ -58,7 +58,7 @@
   <section class="section-heading-separator">
     <fieldset>
       <legend>
-        <h2 class="heading-title"><a href=""> Sports </a></h2>
+        <h2 class="heading-title"><a href=""> SPORTS </a></h2>
       </legend>
     </fieldset>
 
