made some changes in the structure of sports page

--- a/metro.html
+++ b/metro.html
@@ -613,7 +613,7 @@
                 </section>
             </section>
 
-            <section class="advert">
+            <!-- <section class="advert">
                 <div class="advert-div">
                     <p>
                         <a
@@ -669,7 +669,7 @@
 
                 </div>
 
-            </section>
+            </section> -->
 
             <section class="whole-section">
 
@@ -1086,7 +1086,7 @@
                 </section>
             </section>
 
-            <section class="advert">
+            <!-- <section class="advert">
                 <div class="advert-div">
                     <p>ADVERTISMENT</p>
                     <p>ADVERTISMENT</p>
@@ -1111,7 +1111,7 @@
                     <p>ADVERTISMENT</p>
                 </div>
 
-            </section>
+            </section> -->
 
             <hr>
             <!--second section-->
