Changed background color of the header and footer Made the footer responsive Added hover effects to the anchor links Styled the logo

--- a/politics.html
+++ b/politics.html
@@ -33,7 +33,7 @@
                 </svg>
             </label>
             <div class="header-logo">
-                <h3>Elite Blog</h3>
+                <h3>El<span>ite</span> Blog</h3>
             </div>
             <div class="nav-links">
                 <ul class="nav-menu">
@@ -412,22 +412,22 @@
     </main>
     <footer>
         <!-- ADD THE FOOTER SECTION HERE -->
-        <div class="container">
-            <div class="footer-top">
-                <div class="footer-logo">
-                    <h3>Elite Blog</h3>
-                </div>
-                <div class="footer-call-to-action">
-                    <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-                            fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                            <path
-                                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-                        </svg></a>
-                    <form action="" class="form-search-wrapper">
-                        <input type="text" class="search-input" placeholder="Search...">
-                    </form>
-                </div>
-            </div>
+        <div class="footer-top">
+            <div class="footer-logo">
+                <h3>El<span>ite</span> Blog</h3>
+                 </div>             
+                 
+                      <form action="" class="footer-form">
+                          <div class="form-search-wrapper"> 
+                          <input type="text" class="search-input" placeholder="Search...">
+                        </div>
+                      <div class="search-button">
+                        <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                          </svg></a>
+                        </div>
+                        </form>
+                      </div>
             <div class="footer-middle-section">
                 <div class="footer-section">
                     <a href="#">TIIDELab</a>
@@ -458,9 +458,8 @@
                     <a href="#">Special features</a>
                     <a href="#">Technology</a>
                     <a href="#">Qatar 2022 world cup</a>
-                    <a href="#">Columns</a>
                     <a href="#">Advertise with Us</a>
-                    <a href="#" class="subscribe-btn">Subscribe</a>
+                   <a href="#"><button class="footer-subscribe-btn">Subscribe</button></a>
                 </div>
             </div>
             <hr>
@@ -468,7 +467,6 @@
 
                 <div class="footer-bottom-link">
                     <a href="#">About Us</a>
-                    <a href="#">Advertise with Us</a>
                     <a href="#">Contact</a>
                 </div>
 
