I added a form to the contact page of the website I removed white space below the footer I removed the mentor name from the footer I linked the contact page to all other pages I removed overflow from the nav-links in the phone view

--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
 <div class="footer-bottom-section">
 <div class="footer-bottom-link">
     <a href="#">About Us</a>
-    <a href="#">Contact</a>
+    <a href="contact.html">Contact</a>
 </div>
 
 <div class="footer-social-links">
