--- a/politics.html
+++ b/politics.html
@@ -467,11 +467,11 @@
 
                 <div class="footer-bottom-link">
                     <a href="#">About Us</a>
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </div>
 
                 <div class="footer-social-links">
-                    <p>Follow us on Social Media:</p>
+                    <p>Social Media:</p>
                     <a href="https://twitter.com/TIIDELab" target="_blank">
                         <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor"
                             class="bi bi-twitter" viewBox="0 0 16 16">
@@ -511,7 +511,7 @@
 
                 </div>
             </div>
-            <p class="mentor-name">Project Supervised by: Miss Oyinlade Ojesanmi</p>
+          
             <p class="copyright">&copy 2022 TIIDELab Pre-fellowship Group D</p>
         </div>
 
