--- a/newMetro.html
+++ b/newMetro.html
@@ -700,7 +700,7 @@
   <div class="footer-bottom-section">
   <div class="footer-bottom-link">
       <a href="#">About Us</a>
-      <a href="#">Contact</a>
+      <a href="contact.html">Contact</a>
   </div>
   
   <div class="footer-social-links">
@@ -742,7 +742,6 @@
   </div>
   
   <div class="footer-copyright">
-  <p class="mentor-name">Project Supervised by: Miss Oyinlade Ojesanmi</p>
   <p class="copyright">&copy 2022 TIIDELab Pre-fellowship Group D</p>
   </div>
   
