--- a/politics.html
+++ b/politics.html
@@ -110,7 +110,7 @@
                     <a
                         href="https://punchng.com/breaking-apc-convention-six-chairmanship-aspirants-step-down-back-buharis-candidate/">
                         <p>
-                            Apc convenntion:Six chairmanship aspirants step down, back buhari's candidate
+                            Apc convention:Six chairmanship aspirants step down, back buhari's candidate
                         </p>
                     </a>
                     <h6>Noah Banjo 1:30</h6>
@@ -145,6 +145,15 @@
                     </a>
                     <h6>Sadiq Oyeleke 11:39am</h6>
                 </div>
+            </div>
+        </section>
+
+        <!-- //Advertisement one// -->
+        <section class="advertisement">
+            <div class="advert">
+                <a
+                    href="https://adclick.g.doubleclick.net/pcs/click?xai=AKAOjsuTLbNctOa5WN-vGFm4Ynp6hSzcvdfStlPjns9cwCZdF5Fdp1F2PTUibrXGyv_ag30k56h_LxWduHqQvixZTBMiFopImS5KiFpZTpSXf5ihL0suhrHIDoX7tdbgeqzRfIfiKODxwGXBGlsCxhKIgRi24XGH4NcrjBf5glzOUtOgIjw__sKxN0jIqs8A1GlNhtGiV56e_h4mI_KGxOTeFSVsWfGvj6D9ZPvn1YPyX1gX7BE-DKFcFnTfRT4t00yy7WgxlV7tCdMjoX_wg5K19d3wJRrrdN3q9UHu4lL5OsRu-8Q4Dax7V7YSQc0cmcLJzTAJDhVJeaVekyzG2QWFeUbpqoo_UW1LdElNrXMfWq4_A-nNIgD59a_-bHAR8RA1sAoe3EkzjHm-ya7e0yVbY2unTh8q_VDL82R1-aMiEXIyuqeL5rxJ1hIuA-8ZAfAWk0iNyjIrBqEiDdFwoJPSfuGFYStugEx8BUcQHMGjTryJkZSDz2ljIGCGQWho6oivNwau_A6UfIYzIQ1_nZD-DfsqcKn4JOWn3Tgf7OqbMcv4gul-VJS-rHETMh4RsnctP02nLZ8qcWpmM6MPShzSxeT0E9RovqR7qSOgbraTQ4uRXK9zYayCRaWszyESpJSLK0-UnYmxkgxOgPcp8_Y4kU6o0vFLdjasjDCwplF5_Ie9tBxV-LYDV547yTUz3SKYqfNakrZXU3brHNNy_E37-9hQVuQB76e1sGk7FqUjjmZ_nBVMgEiHb-XqOiuW9IrWcOg4uM29c6o0jeE6TYo6Shsj7iIENlfN3B4tQCJ4aBgNrpxNq2mnl27xTXaKMIG8VPu5fu46w_BzKgoEImj-cGeyy2s_OOEDdSBGH2nqUM_SDNHQFo4pPkAb2aPd9tqpqI1rCvzLQAhThKGg39x6aD6mm0ibcglNwK0XiEVoijLTCIB4FvSD_Q9Yh0XP43lhO5FAztoFCErJ4C5mVc70eJXkGgqDPZwhhfuvI0nVwVhxUvgtkAe9Ib6XUaCVstaqrVBXzq-lQSjBWA5yNhf1oQ8AmRjghb3599ZtO0cwArEqCIcdjw-Ufh9IJlhDZvOY8OJhTULuNOVUzZJUMWDVYy-kU0F3pLtqbkjoWf4Y93m2QGZ7Jm-3xcQlCREjn-U4bTIb3jut_hw1aZj1verLUKSdPZeNSJcqycmFRGUq_CefsnDi1IfQBAjYvPrISKq-&sai=AMfl-YSlVIfuMyd7rjv1qwDlpT6xGQDRbGv3npp35NfkK3Ue6E--NujWI_T-VuGjD4PoUq14p2yW6JkJMW1koYth_4grDACliecokkqLkfkuF2TuZ2Eq6NobkOrupudqPj-Hthut0bf08O_am8evW-_UfyEuTYrZiX82_A&sig=Cg0ArKJSzOAA_e5uhGgE&fbs_aeid=[gw_fbsaeid]&urlfix=1&nx=513&ny=66&dim=970x90&adurl=https://www.gloworld.com/ng/glo-11ks-prepaid-plan%3Futm_source%3DGoogle%2520Display%26utm_medium%3DDisplay%26utm_campaign%3D11k%26dclid%3D%25edclid!">
+                    <img class="adn" src="https://s0.2mdn.net/simgad/16692383492823356427" alt="ADVERTISMENT"> </a>
             </div>
         </section>
 
@@ -217,6 +226,18 @@
                         APC floors PDP in infrastructure growth, says Fashola
                     </p>
                 </a>
+            </div>
+        </section>
+
+        <!-- //Advertisement two// -->
+        <section class="advertisement">
+            <div class="advert">
+                <a
+                    href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=CoxfzqN9EYsnYDMaC2fcPh5e3gAj0_--uacrY6ozlD4Wkm7MEEAEg8NzeRGC35IKFmDCgAdqX6a4oyAECqQLh899FuKgkPuACAKgDAcgDCKoEjQJP0JQWZXpKzjW59QkpNrydnocnbaApeKTmEnGEwrRjtgi4eFHAF3N6qkKeD48Fo2Upba_u8W019yFyKUVj0oY4-ciGE1TRqkulDHWUtQu7wAH9HWRcU7KBvErq-255cvRqeGwz_lVqRpx9cOzc1d4SghseabghmrOBAVWmIqUaJgCLImefbBlOURKvED68zn9bGbRD2v0Eby1Tm3YdDjxF1gXje2ZTsMKq0geyjqOqrAHYRqA6gMdsKbabbJogWmOJs4QbtdusktqalMkFTbzZWUV1gJOEMUrd2CYdeSCMWh4aOP5l8lf7iT3f4gp3dMoSBKrQ6X6NgETw9BeEUOrQHVnrNH7A_A1z-ynaacAErMDh1fYD4AQBoAYCgAfaz7mOA6gHjs4bqAeT2BuoB-6WsQKoB_6esQKoB6SjsQKoB9XJG6gHpr4bqAfz0RuoB5bYG6gHqpuxAqgH35-xAtgHAdIIBwiAYRABGB2xCXo4nYPG8Fo0gAoDmAsByAsBuAwB2BMD0BUB-BYBgBcB&ae=1&num=1&cid=CAASJORoz4e57OVS_alvu3ECVzch015iJBveMX9Ukq9BNlloWhF3Iw&sig=AOD64_2cSLn7thJCCXhjekHu5rPsmk3rbw&client=ca-pub-5689805440782123&nx=321&ny=83&nb=2&adurl=https://www.instagram.com/cocacola_ng/">
+                    <img class="adn" src="https://tpc.googlesyndication.com/simgad/9158361812648606662"
+                        alt="ADVERTISMENT">
+                </a>
+                </p>
             </div>
         </section>
 
@@ -358,6 +379,16 @@
                 </a>
             </div>
         </section>
+
+        <!-- Advertisement 3
+        <section class="advertisement-3">
+            <div class="advert">
+                    <a
+                        href="https://adclick.g.doubleclick.net/pcs/click?xai=AKAOjsuKq-5HcF7m-jgzeElRPqZ9-1YJnXNuiFV8MYMycCETCZ5oK8WQ1Rciz4b7OaTofNf-7EVmJINeXwX45FmVxHzfmF2nBHIarDCsOOcisiDbTYUm52ThPnXE6F0E0T5EOsvmTohrMOvq9T5VOWeFpC46UlcAc4D8IlHyDV0qh0zO-AQ2w6isU9zk1EY7SahuAuIN1YRu5mmAfThQYublOtXtMm8s1icNEsboICF5JN7uXztPvdGHu8bn0aspNwD94hvA4DrzRVXUnk24lyGo_KMHBq0uat-9lWK5jbpsAN0aOQ9x8ZxWoh0l7t1mi9kRuJkNqu6CDLJSPW0Aoc9dJ726kxZ85Xrz0WgKRbgeE7I130wDe6q9ayFZCfczqcSjk9tlfFyIfIlJ6Mgb9nX-vVU-w-Lq4QKTBSJxfrSvR1lXeFNFANrnHUcfxbFE9jPAdUBCup-SUri4qD8fdTgskpDHjA1CCu6iUYd6TsdHYtZdSuzMmnl0l1cZF5n1PwtEfP0rfSA98t2PIYGZKUmvKxbjJeBZ0zQYtaVCcZKLW6Xz-Ivg9pWDazWFLVFFjwveDSWwdq6L0MTBm8UjIPbMCG7eLfXhKz7MqpIpSnPLNfbbLPHgdcouYbekVdiqJm8T2hyTnkxmxH1-vDaEnP0TBhdkjw7Me-Zn6UMsjdie2rcgXxRZAE_oMxRU4qdnxqSmThpuR59hwK53gHangy40ZPgyBz9-QUK-kwnssMHu3b8VE5t_F8vbnULKjnlNxjsc9ha8AFmV1hULYBIl3CTjRS77Sjuj75EjFnPfU-h39XGfMQuCzhro_Y7ce279TGxkRg28UYPx9iv9BMbKbnpZ1EuAnTOQ2M4Ng4iUS59_bvIt-fZbtEnx6XeGPeUij93fXdy3NzajdtiSRoGzClSTkoFSronDf20oqaJe07NrpJ3_IWG7-OG4y_Zn3RaiRtU9QslUadgmAyPezvxUDhuvsmrTHOw31pfz-txt5FpIuSARFjS_kI1ul7LS8jsQdB2x297zlPI5Jl9uGyVp3hqdj4YukLcefvvhIE94J_vucxpFkwlWsP4iIV2npZDtbcW1Ewj30uOV3fa5xoybcuwneUAlx7ZpWq6e6ayQM1oDCY5smODNsgILOvY8&sai=AMfl-YTzGkxuIAepVD-SFNb0tr1F8noCPsC3Uz7Kw37aL-BOh6GVdS6U3hxigTr1a9AiVegpb4zjrUSfaC-Mbc5X1xI7av6Htl5bFTg-G6VW12An5WrcCMCdvQa1ewEJNsNeAl1gXa8wYouF9bfX-u-1zcLoKnteJDIF6zfvrkAhudyxsX2jSEyO8RoH5r2ZpYXMW6vaR7WYUxb52btTcaTvpfJrnRcOoKIz&sig=Cg0ArKJSzNiJgN1CWQQ2&cry=1&fbs_aeid=[gw_fbsaeid]&urlfix=1&nx=42&ny=474&dim=300x600&adurl=https://www.getolympus.com/om-system-om-1.html%3Futm_source%3Dcrd_programmatic%26utm_medium%3Ddisplay%26utm_campaign%3Dcroud_programmatic_dv360_us_programmatic_conversion_productcampaign">
+                        <img class="ad" src="https://images.unsplash.com/photo-1534131707746-25d604851a1f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="ADVERTISMENT"> </a>
+            </div>
+        </section> -->
+
 
         <section class="section-5">
             <div class="one-link">1</div>
