Added required attribute to the contact form name and input fields made the navbar sticky to the top on scroll changed navlink hover color gave the header subscribe button a hover effect made the logo link to the homepage on all pages linked the header search bar to the footer search bar Increased the width of the footer search bar

--- a/tidelabNews.html
+++ b/tidelabNews.html
@@ -33,11 +33,13 @@
                 </svg>
             </label>
         <div class="header-logo">
-            <h3>El<span>ite</span> Blog</h3>
+            <a class="revert-to-homepage" href="index.html">
+                <h3>El<span>ite</span> Blog</h3>
+            </a>
              </div>
              <div class="nav-links">
                <ul class="nav-menu">
-                 <li> <a class="nav-link" href="./homepage.html">Home</a></li>
+                 <li> <a class="nav-link" href="./index.html">Home</a></li>
                  <li> <a class="nav-link" href="./tidelabNews.html">TIIDELab</a></li>
                  <li> <a class="nav-link about-link" href="./sports.html">Sports</a></li>
                  <li> <a class="nav-link" href="./politics.html">Politics</a></li>
@@ -46,7 +48,7 @@
              </div>
              <div class="nav-call-to-action">
                  <a href="" class="subscribe-btn">Subscribe</a>
-                 <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                 <a href="#search-report" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                     <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                   </svg></a>
              </div>
@@ -267,10 +269,12 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <h3>El<span>ite</span> Blog</h3>
+                <a class="revert-to-homepage" href="index.html">
+                    <h3>El<span>ite</span> Blog</h3>
+                </a>
                  </div>             
                  
-                      <form action="" class="footer-form">
+                      <form action="" class="footer-form" id="search-report">
                           <div class="form-search-wrapper"> 
                           <input type="text" class="search-input" placeholder="Search...">
                         </div>
