--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,13 @@
                 </svg>
             </label>
             <div class="header-logo">
-                <h3>El<span>ite</span> Blog</h3>
+                <a class="revert-to-homepage" href="index.html">
+                    <h3>El<span>ite</span> Blog</h3>
+                </a>
             </div>
             <div class="nav-links">
                 <ul class="nav-menu">
-                    <li> <a class="nav-link" href="#">Home</a></li>
+                    <li> <a class="nav-link" href="index.html">Home</a></li>
                     <li> <a class="nav-link" href="./tidelabNews.html">TIIDELab</a></li>
                     <li> <a class="nav-link about-link" href="./sports.html">Sports</a></li>
                     <li> <a class="nav-link" href="./politics.html">Politics</a></li>
@@ -46,7 +48,7 @@
             </div>
             <div class="nav-call-to-action">
                 <a href="" class="subscribe-btn">Subscribe</a>
-                <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                <a href="#search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
@@ -64,11 +66,11 @@
                     </div>
                     <div class="contact-form-group">
                         <label for="email">Your name</label>
-                        <input id="name" class="name-input" type="text" placeholder="Your name">
+                        <input id="name" class="name-input" type="text" placeholder="Your name" required>
                     </div>
                     <div class="contact-form-group">
                         <label for="email">Your email</label>
-                        <input id="email" class="email-input" type="text" placeholder="Your email">
+                        <input id="email" class="email-input" type="text" placeholder="Your email" required>
                     </div>
                 <div class="contact-form-group">
                     <label for="subject">Subject</label>
@@ -77,7 +79,7 @@
                 <div class="contact-form-group"> 
                     <label for="message">Message</label>
                 <textarea name="" id="message" clas="State" placeholder="write your message here...."></textarea>
-                <a class="send-btn" href="#">Send Message</a>
+                <button type="submit" class="send-btn" href="#">Send Message</button>
                 </div>
                   
             </form>
@@ -85,10 +87,12 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <h3>El<span>ite</span> Blog</h3>
+                <a class="revert-to-homepage" href="index.html">
+                    <h3>El<span>ite</span> Blog</h3>
+                </a>
                  </div>             
                  
-                      <form action="" class="footer-form">
+                      <form action="" class="footer-form" id="search-news">
                           <div class="form-search-wrapper"> 
                           <input type="text" class="search-input" placeholder="Search...">
                         </div>
