--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
                 </svg>
             </label>
             <div class="header-logo">
-                <h3>El<span>ite</span> Blog</h3>
+                <a class="revert-to-homepage" href="index.html">
+                    <h3>El<span>ite</span> Blog</h3>
+                </a>
             </div>
             <div class="nav-links">
                 <ul class="nav-menu">
@@ -46,7 +48,7 @@
             </div>
             <div class="nav-call-to-action">
                 <a href="" class="subscribe-btn">Subscribe</a>
-                <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                <a href="#search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
@@ -711,10 +713,12 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <h3>El<span>ite</span> Blog</h3>
+                <a class="revert-to-homepage" href="index.html">
+                    <h3>El<span>ite</span> Blog</h3>
+                </a>
                  </div>             
                  
-                      <form action="" class="footer-form">
+                      <form action="" class="footer-form" id="search-news">
                           <div class="form-search-wrapper"> 
                           <input type="text" class="search-input" placeholder="Search...">
                         </div>
