--- a/subscribe.html
+++ b/subscribe.html
@@ -37,7 +37,7 @@
             </div>
             <div class="nav-links">
                 <ul class="nav-menu">
-                    <li> <a class="nav-link" href="#">Home</a></li>
+                    <li> <a class="nav-link" href="./index.html">Home</a></li>
                     <li> <a class="nav-link" href="#app-features">App Features</a></li>
                     <li> <a class="nav-link about-link" href="#subscription">Subscription</a></li>
                     <li> <a class="nav-link" href="#about">About us</a></li>
@@ -225,7 +225,7 @@
                     </div>
 
                     <div class="contact-form-group"> 
-                        <label for="message">Message</label>
+                        <label for="message">Comments</label>
                     <textarea name="" id="message" clas="State" placeholder="drop your comments here...."></textarea>
                     <a class="send-btn" href="#">Submit</a>
                     </div>
@@ -305,7 +305,7 @@
         <!--SMSS card three for linkedin design-->
         <div class="SMSS-card">
 
-            <a href="https://www.linkedin.com/company/tiidelab" target="blank" rel="noreferrer noopener">    <div class="SMSS-svg-card">
+            <a href="https://www.linkedin.com/company/tiidelab" target="_blank" >    <div class="SMSS-svg-card">
 
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
                     <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
@@ -391,6 +391,14 @@
 
             </div>
         </div>
+
+        
+    <a class="bottom-top-button" href="#">
+        <svg xmlns="http://www.w3.org/2000/svg" width="" height="" fill="currentColor" class="bi bi-arrow-up-square-fill" viewBox="0 0 16 16">
+            <path d="M2 16a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2zm6.5-4.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 1 0z"/>
+          </svg>
+    </a>
+
 
     </section>
 
