added an h1 tag in editorial html and added new background color in editorial css

--- a/editt.html
+++ b/editt.html
@@ -11,93 +11,93 @@
     
     <!-- hero section -->
     <section class="hero-wrapper">
-        <h1 class="edit">EDITORIAL PAGE</h1>
+        <h1 class="edit">OUR TEAM PAGE</h1>
         <div class="image">
         <div class="life">
-            <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-            <h2 class="nam">Odezulu Augustine</h2>
+            <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+            <h1 class="nam">Odezulu Augustine</h1>
             <h2 class="nam">Team Leader</h2>
-            <h2 class="nam">Sofware Developer</h2>
+            <h3 class="nam">Sofware Developer</h3>
             </div>
         <div class="life-one">
-        <img src="./image 11/Screenshot_20220404-181923-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Bassey Hyonam Victor</h2>
+        <img src="./image 12/image 11/Screenshot_20220404-181923-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Bassey Hyonam Victor</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         <div class="life-two">
-        <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Zainab Momoh</h2>
+        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Zainab Momoh</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Sofware Devoloper</h2>
+        <h3 class="nam">Sofware Devoloper</h3>
         </div>
         </div>
 
         <div class="light">
         <div class="height">
-            <img src="./image 11/WIN_20220403_15_17_19_Pro-modified.png" alt="an image" class="profile" width="50%" height="50%">
-            <h2 class="nam">Aweda Ridwan Olayinka</h2>
+            <img src="./image 12/image 11/WIN_20220403_15_17_19_Pro-modified.png" alt="an image" class="profile" width="50%" height="50%">
+            <h1 class="nam">Aweda Ridwan Olayinka</h1>
             <h2 class="nam">Team Member</h2>
-            <h2 class="nam">Software Developer</h2>
+            <h3 class="nam">Software Developer</h3>
             </div>
         <div class="height-one">
-        <img src="./image 11/Screenshot_20220404-181909-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Rotimi Jemilat</h2>
+        <img src="./image 12/image 11/Screenshot_20220404-181909-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Rotimi Jemilat</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         <div class="height-two">
-        <img src="./image 11/Screenshot_20220404-181941-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Adeola Ajibade</h2>
+        <img src="./image 12/image 11/Screenshot_20220404-181941-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Adeola Ajibade</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         </div>
 
         <div class="soft">
          <div class="size">
-        <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Ajiboye Muideen</h2>
+        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Ajiboye Muideen</h1>
         <h2 class="nam">Team Member</h2>
-        <h2>Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         <div class="size-one">
-        <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Abbas Billiamin</h2>
+        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Abbas Billiamin</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         <div class="size-two">
-        <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Rotimi Olamilekan Taofiq</h2>
+        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Rotimi Olamilekan Taofiq</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         </div>
 
         <div class="img">
         <div class="field">
-        <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Awowede akpobaro</h2>
+        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Awowede akpobaro</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         <div class="field-one">
-        <img src="./image 11/Screenshot_20220404-181838-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Abraham solabi</h2>
+        <img src="./image 12/image 11/Screenshot_20220404-181838-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Abraham solabi</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         <div class="field-two">   
-        <img src="./image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
-        <h2 class="nam">Adegoke Stella Adenike</h2>
+        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <h1 class="nam">Adegoke Stella Adenike</h1>
         <h2 class="nam">Team Member</h2>
-        <h2 class="nam">Software Developer</h2>
+        <h3 class="nam">Software Developer</h3>
         </div>
         </div>
         <div class="live">
-            <img src="./image 11/Screenshot_20220404-181850-modified.png" alt="miss ojesanmi elizabeth" class="profile-image" width="20%" height="20%">
-            <h2 class="full-name">Miss Ojesanmi Elizabeth</h2>
+            <img src="./image 12/image 11/Screenshot_20220404-181850-modified.png" alt="miss ojesanmi elizabeth" class="profile-image" width="20%" height="20%">
+            <h1 class="full-name">Miss Ojesanmi Elizabeth</h1>
             <h2>Mentor</h2>
         </div>
 
