third commit added the other news extensions modified the homepage top stories section

--- a/subscribe.html
+++ b/subscribe.html
@@ -227,7 +227,7 @@
                     <div class="contact-form-group"> 
                         <label for="message">Comments</label>
                     <textarea name="" id="message" clas="State" placeholder="drop your comments here...."></textarea>
-                    <a class="send-btn" href="#">Submit</a>
+                    <a class="send-btn" href="" target="_blank">Submit</a>
                     </div>
                 </form>
 
