--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
     <article class="middle-news-content">
         <a class="middle-news-content-image-display" href="https://tiidelab.com/pages/success-story.html" target="blank" rel="noreferrer noopener">
-            <img src="https://media.istockphoto.com/photos/successful-happy-group-of-people-learning-software-engineering-and-picture-id1164704318?b=1&k=20&m=1164704318&s=170667a&w=0&h=aq1G0hJWZTgJ0cc8erWN14ZHhARGqqbNhWKYgJsy8KI="/>
+            <img src="https://pbs.twimg.com/media/FPo5qhOXoAMKvoW?format=jpg&name=360x360"/>
         </a>
 
         <h3 class="middle-news-content-headline"><a href="https://tiidelab.com/pages/success-story.html" target="blank" rel="noreferrer noopener" >TIIDELAB launches their first group project of prospective 2022 techies (software developers)</a></h3>
@@ -282,10 +282,13 @@ the desktop view -->
 <!--third video content card-->
 <div class="video-content-card">
     <!--change the image sources to links for videos sources-->
-<a href ="https://www.youtube.com/results?search_query=trending+news+videos" target="blank" rel="noreferrer noopener"> <img src="https://images.unsplash.com/photo-1615506313305-e61daaa8cdcb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZGlzYWJpbGl0aWVzfGVufDB8fDB8fA%3D%3D&auto=format&fit=crop&w=500&q=60"/></a>
+<a href ="https://www.youtube.com/results?search_query=trending+news+videos" target="blank" rel="noreferrer noopener">
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/Cau5MJ-fRsU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </a>
 <section class="section video-content-news-details">
     <h3 class="video-content-title">Video </h3>
-   <a href="https://www.youtube.com/results?search_query=trending+news+videos" target="blank" rel="noreferrer noopener"> <p>How i was extorted and harrased by security operatives in Abuja - popular nigerian artise reveals</p></a>
+   <a href="https://www.youtube.com/watch?v=Cau5MJ-fRsU" target="blank" rel="noreferrer noopener"> 
+       <p>You are more disabled than i am - Nick Vujicic speaks to his audience with confidence</p></a>
 </section>
 </div>
 
@@ -876,6 +879,7 @@ Further note: the CSS style code for this section is denoted with the abbreviati
 <section class="section video-content-news-details">
    <a href=""> <p>How i was extorted and harrased by security operatives in Abuja - popular nigerian artise reveals</p> </a>
 </section>
+</div>
 </div>
 
 </section>
