Made the contact form name and input field required linked the header search bar to the footer search bar gave all the pages a smooth scroll transition effect linked the about us in the footer to the editorial page changed the background color of the nav-menu on smaller screen sizes to linear gradient Incresaed the width of the search bar in the footer added header and footer to the editorial page modified the header and footer of the tiidelab news pages set the opacity of the nav-links to 0.85 on hover

--- a/sports.html
+++ b/sports.html
@@ -45,8 +45,8 @@
         </ul>
       </div>
       <div class="nav-call-to-action">
-        <a href="" class="subscribe-btn">Subscribe</a>
-        <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+        <a href="#" class="subscribe-btn">Subscribe</a>
+        <a href="#search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
             class="bi bi-search" viewBox="0 0 16 16">
             <path
               d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
@@ -702,7 +702,7 @@
                     <input type="text" class="search-input" placeholder="Search...">
                   </div>
                 <div class="search-button">
-                  <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                  <a href="#" id="search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                       <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                     </svg></a>
                   </div>
@@ -746,7 +746,7 @@
       <div class="footer-bottom-section">
 
         <div class="footer-bottom-link">
-          <a href="#">About Us</a>
+          <a href="editt.html">About Us</a>
           <a href="contact.html">Contact</a>
         </div>
 
