--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
             </div>
             <div class="nav-call-to-action">
                 <a href="" class="subscribe-btn">Subscribe</a>
-                <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                <a href="#search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                         fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                         <path
                             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
@@ -64,11 +64,11 @@
                     </div>
                     <div class="contact-form-group">
                         <label for="email">Your name</label>
-                        <input id="name" class="name-input" type="text" placeholder="Your name">
+                        <input id="name" class="name-input" type="text" placeholder="Your name" required>
                     </div>
                     <div class="contact-form-group">
                         <label for="email">Your email</label>
-                        <input id="email" class="email-input" type="text" placeholder="Your email">
+                        <input id="email" class="email-input" type="text" placeholder="Your email" required>
                     </div>
                 <div class="contact-form-group">
                     <label for="subject">Subject</label>
@@ -77,7 +77,7 @@
                 <div class="contact-form-group"> 
                     <label for="message">Message</label>
                 <textarea name="" id="message" clas="State" placeholder="write your message here...."></textarea>
-                <a class="send-btn" href="#">Send Message</a>
+                <button type="submit" class="send-btn" href="#">Send Message</button>
                 </div>
                   
             </form>
@@ -93,7 +93,7 @@
                           <input type="text" class="search-input" placeholder="Search...">
                         </div>
                       <div class="search-button">
-                        <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                        <a href="#" id="search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
                             <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
                           </svg></a>
                         </div>
@@ -138,7 +138,7 @@
         
 <div class="footer-bottom-section">
 <div class="footer-bottom-link">
-    <a href="#">About Us</a>
+    <a href="editt.html">About Us</a>
     <a href="#">Contact</a>
 </div>
 
