--- a/editt.html
+++ b/editt.html
@@ -115,7 +115,7 @@
         <h3 class="nam">Software Developer</h3>
         </div>
         <div class="size-two">
-        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <img src="./image 14/Screenshot_20220407-190135-modified.png" alt=" an image" class="profile" width="50%" height="50%">
         <h1 class="nam">Rotimi Olamilekan Taofiq</h1>
         <h2 class="nam">Team Member</h2>
         <h3 class="nam">Software Developer</h3>
@@ -136,7 +136,7 @@
         <h3 class="nam">Software Developer</h3>
         </div>
         <div class="field-two">   
-        <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
+        <img src="./image 14/Screenshot_20220407-190149-modified.png" alt=" an image" class="profile" width="50%" height="50%">
         <h1 class="nam">Adegoke Stella Adenike</h1>
         <h2 class="nam">Team Member</h2>
         <h3 class="nam">Software Developer</h3>
