--- a/Spt01.html
+++ b/Spt01.html
@@ -9,51 +9,51 @@
 </head>
 <body>
     
-    <header>
-        <!-- ADD THE NAVIGATION SECTION HERE -->
-        <nav>
-          <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
-          <label for="nav-checkbox" class="nav-toggle">
-            <svg class="menu" viewbox="0 0 448 512" width="100" title="bars">
-              <path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 
-                  67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 
-                  16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 
-                  0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 
-                  16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" />
-            </svg>
-            <svg class="close" viewbox="0 0 384 512" width="100" title="times">
-              <path d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19
-                  0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28
-                  75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28
-                  12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28
-                   32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176
-                  322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 
-                  12.28-32.19 0-44.48L242.72 256z" />
-            </svg>
-          </label>
-          <div class="header-logo">
-            <h3>Elite Blog</h3>
-          </div>
-          <div class="nav-links">
-            <ul class="nav-menu">
-              <li> <a class="nav-link" href="./homepage.html">Home</a></li>
-              <li> <a class="nav-link" href="./tidelabNews.html">TIIDELab</a></li>
-              <li> <a class="nav-link about-link" href="./sports.html">Sports</a></li>
-              <li> <a class="nav-link" href="./politics.html">Politics</a></li>
-              <li> <a class="nav-link" href="./metro.html">Metro Plus</a></li>
-            </ul>
-          </div>
-          <div class="nav-call-to-action">
-            <a href="" class="subscribe-btn">Subscribe</a>
-            <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
-                class="bi bi-search" viewBox="0 0 16 16">
-                <path
-                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-              </svg></a>
-          </div>
-        </nav> 
-   </header>
+  <header>
+    <!-- ADD THE NAVIGATION SECTION HERE -->
+    <nav>
+      <input type="checkbox" id="nav-checkbox" class="nav-checkbox">
+      <label for="nav-checkbox" class="nav-toggle">
+        <svg class="menu" viewbox="0 0 448 512" width="100" title="bars">
+          <path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 
+              67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 
+              16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 
+              0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 
+              16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z" />
+        </svg>
+        <svg class="close" viewbox="0 0 384 512" width="100" title="times">
+          <path d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19
+              0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28
+              75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28
+              12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28
+               32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176
+              322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 
+              12.28-32.19 0-44.48L242.72 256z" />
+        </svg>
+      </label>
+      <div class="header-logo">
+        <h3>El<span>ite</span> Blog</h3>
+      </div>
+      <div class="nav-links">
+        <ul class="nav-menu">
+          <li> <a class="nav-link" href="./index.html">Home</a></li>
+          <li> <a class="nav-link" href="./tidelabNews.html">TIIDELab</a></li>
+          <li> <a class="nav-link about-link" href="./sports.html">Sports</a></li>
+          <li> <a class="nav-link" href="./politics.html">Politics</a></li>
+          <li> <a class="nav-link" href="./metro.html">Metro Plus</a></li>
+        </ul>
+      </div>
+      <div class="nav-call-to-action">
+        <a href="#" class="subscribe-btn">Subscribe</a>
+        <a href="#search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
+            class="bi bi-search" viewBox="0 0 16 16">
+            <path
+              d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+          </svg></a>
+      </div>
+    </nav>
 
+  </header>
    
    
    <main>
@@ -221,25 +221,25 @@
   
    <footer>
     <!-- ADD THE FOOTER SECTION HERE -->
-    <div class="container">
-      <div class="footer-top">
-        <div class="footer-logo">
-          <h3>Elite Blog</h3>
-        </div>
-        <div class="footer-call-to-action">
-          <a href="" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
-              fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-              <path
-                d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-            </svg></a>
-          <form action="" class="form-search-wrapper">
-            <input type="text" class="search-input" placeholder="Search...">
-          </form>
-        </div>
-      </div>
+    <div class="footer-top">
+      <div class="footer-logo">
+          <h3>El<span>ite</span> Blog</h3>
+           </div>             
+           
+                <form action="" class="footer-form">
+                    <div class="form-search-wrapper"> 
+                    <input type="text" class="search-input" placeholder="Search...">
+                  </div>
+                <div class="search-button">
+                  <a href="#" id="search-news" class="search-btn"><svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                    </svg></a>
+                  </div>
+                  </form>
+                </div>
       <div class="footer-middle-section">
         <div class="footer-section">
-          <a href="#">TIIDELab</a>
+          <a href="./index.html">TIIDELab</a>
           <a href="./sports.html">Sports</a>
           <a href="./politics.html">Politics</a>
           <a href="./metro.html">Metro Plus</a>
@@ -267,22 +267,20 @@
           <a href="#">Special features</a>
           <a href="#">Technology</a>
           <a href="#">Qatar 2022 world cup</a>
-          <a href="#">Columns</a>
           <a href="#">Advertise with Us</a>
-          <a href="#" class="subscribe-btn">Subscribe</a>
-        </div>
+         <a href="#"><button class="footer-subscribe-btn">Subscribe</button></a>
       </div>
+  </div>
       <hr>
       <div class="footer-bottom-section">
 
         <div class="footer-bottom-link">
-          <a href="#">About Us</a>
-          <a href="#">Advertise with Us</a>
-          <a href="#">Contact</a>
+          <a href="editt.html">About Us</a>
+          <a href="contact.html">Contact</a>
         </div>
 
         <div class="footer-social-links">
-          <p>Follow us on Social Media:</p>
+          <p>Social Media:</p>
           <a href="https://twitter.com/TIIDELab" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="currentColor" class="bi bi-twitter"
               viewBox="0 0 16 16">
@@ -322,7 +320,6 @@
 
         </div>
       </div>
-      <p class="mentor-name">Project Supervised by: Miss Oyinlade Ojesanmi</p>
       <p class="copyright">&copy 2022 TIIDELab Pre-fellowship Group D</p>
     </div>
 
