added one landing page

--- a/sports.html
+++ b/sports.html
@@ -172,7 +172,7 @@
           </section>
           <section class="latest-news-wrapper">
             <div class="news-title">
-              <a href="https://punchng.com/epl-tottenham-go-fourth-west-ham-leave-everton-in-relegation-danger/" target="_blank"
+              <a href="http://127.0.0.1:5503/Spt09.html" target="_blank"
                 rel="noopener noreferrer">
 
                 <p>EPL: Tottenham go fourth, West Ham leave Everton in relegation danger</p>
