--- a/homepage_news_extensions/top_stories_RSSFEED.html
+++ b/homepage_news_extensions/top_stories_RSSFEED.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./business_news_RSS_FEED.css">
+    <link rel="stylesheet" href="./top_stories_RSS_FEED.css">
     <title>ELITE BLOG</title>
 </head>
 
