--- a/editt.html
+++ b/editt.html
@@ -37,7 +37,7 @@
             </div>
             <div class="nav-links">
                 <ul class="nav-menu">
-                    <li> <a class="nav-link" href="#">Home</a></li>
+                    <li> <a class="nav-link" href="index.html">Home</a></li>
                     <li> <a class="nav-link" href="./tidelabNews.html">TIIDELab</a></li>
                     <li> <a class="nav-link about-link" href="./sports.html">Sports</a></li>
                     <li> <a class="nav-link" href="./politics.html">Politics</a></li>
