--- a/politics.html
+++ b/politics.html
@@ -133,8 +133,7 @@
                 </div>
 
                 <div class="links">
-                    <a
-                        href="./politicalnews7.html">
+                    <a href="./politicalnews7.html">
                         <p>
                             Heavy security at Eagle square as APC holds national convention today
                         </p>
