increased the height of the navbar in mobile view linked the subscribe button in the politics page to the subscribe page removed z-index on the header

--- a/editt.html
+++ b/editt.html
@@ -58,7 +58,7 @@
     
     <!-- hero section -->
     <section class="hero-wrapper">
-        <h1 class="edit">OUR TEAM PAGE</h1>
+        <h1 class="edit">MEET OUR TEAM</h1>
         <div class="image">
         <div class="life">
             <img src="./image 12/image 11/Screenshot_20220405-122847-modified.png" alt=" an image" class="profile" width="50%" height="50%">
