--- a/politics.html
+++ b/politics.html
@@ -481,7 +481,7 @@
                 <a href="#">Technology</a>
                 <a href="#">Qatar 2022 world cup</a>
                 <a href="#">Advertise with Us</a>
-                <a href="#"><button class="footer-subscribe-btn">Subscribe</button></a>
+                <a href="subscribe.html"><button class="footer-subscribe-btn">Subscribe</button></a>
             </div>
         </div>
         <hr>
